# Test-Agent

./: .editorconfig  .gitattributes  .gitignore  .markdownlint.json  .markdownlintignore  .npmrc  .pip.conf  .pre-commit-config.yaml  00-协作宪章.md  00-项目导航.md  AGENTS.md  AUDIT-REPORT.md  Agent交互层路线图.md  CHANGELOG.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FULL_GUIDE.md  LICENSE  NOTICE  NOTICE.md  README.md  README.zh-CN.md  README_DETAIL.md  ROADMAP.md  SECURITY.md  Test-Agent工作流搭建.md  VERSION  _精髓库_apply_policy.example.yaml  install.ps1  install.py  install.sh  install_log.txt  package.json  pyproject.toml  tagent.yml.example  灵感笔记.md
apps/desktop-v2/src-tauri/: Cargo.toml
engine/tagent-engine/: Cargo.toml
engine/tagent-engine/src/: error.rs  lib.rs
engine/tagent-engine/tests/: test_orchestrator.rs  test_sandbox.rs
engine/tagent-pyo3/: Cargo.toml
engine/tagent-pyo3/src/: lib.rs
runtime/: .dockerignore  ARCHITECTURE.md  Dockerfile  INDEX.md  __init__.py  docker-compose.app.yml  docker-compose.yml  pyproject.toml
runtime/agent/: __init__.py  permissions.py  prompt_guard.py
runtime/api/: INDEX.md  __init__.py  audit.py  correlation.py  deps.py  main.py  marketplace_api.py  models.py  parsers.py  rbac.py  result_store.py  tenancy.py  tenancy_v2.py
runtime/api/auth/: __init__.py  rbac.py  sso.py
runtime/api/endpoints/: __init__.py  cancel.py  stream.py  webhooks.py
runtime/api/middleware/: __init__.py  enterprise.py
runtime/backends/: INDEX.md  __init__.py  base.py  daytona.py  docker.py  local.py  modal.py  singularity.py  ssh.py  vercel_sandbox.py
runtime/cli/: INDEX.md  __init__.py  _shared.py  aliases.py  colorscheme.py  completer.py  config.py  conversation.py  coverage_progress.py  cross_env.py  data_cleaner.py  doctor.py  env_presets.py  flaky_manager.py  insights.py  interactive.py  interactive_ui.py  main.py  readiness.py  regression_tracker.py  search.py  skins.py  slash_commands.py  tasks.py  test_prioritizer.py  transcript_tui.py  tui_app.py  user_profile.py  voice.py  workspaces.py
runtime/cli/commands/: __init__.py  bootstrap.py  catalog.py  demo.py  doctor.py  export.py  gateway.py  impact.py  init.py  market.py  mcp_commands.py  (+16 more)
runtime/compliance/: __init__.py  engine.py  eu_ai_act.py
runtime/config/: __init__.py  safety.py  settings.py
runtime/core/: sandbox.py
runtime/essence_watcher/: INDEX.md  __init__.py  apply_policy.example.yaml  delta_extractor.py  parser.py  runner.py  tracker.py
runtime/exporters/: INDEX.md  __init__.py  base.py  markmap.py  opml.py  report.py  xmind.py
runtime/gateway/: INDEX.md  __init__.py  base.py  bridge.py  im_bot.py  notify.py  session.py
runtime/healthcheck/: INDEX.md  __init__.py  agent_smoke.py  llm_probe.py  llm_smoke.py
runtime/infra/: __init__.py  auto_update.py  cost_control.py  degradation.py  deprecation.py  di.py  evidence.py  idempotency.py  migration.py  offline.py  rollback.py  storage_strategy.py  telemetry.py  timeout.py  trace.py
runtime/init/: INDEX.md  __init__.py  matrix.py  renderer.py  wizard.py
runtime/intelligence/: __init__.py  canary_config.py  data_lifecycle.py  flaky_analyzer.py  impact_analyzer.py  impact_engine.py  journey_mapper.py  risk_matrix.py  test_prioritizer.py
runtime/learning/: __init__.py  curator.py  pattern_extractor.py  session_store.py
runtime/learning_loop/: INDEX.md  __init__.py  curator.py  session_search.py  skill_distiller.py  skill_scorer.py  user_model.py
runtime/marketplace/: INDEX.md  __init__.py  catalog.py  discovery.py  installer.py  verifier.py
runtime/mcp/: INDEX.md  __init__.py  base.py  client.py
runtime/observability/: INDEX.md  __init__.py  apm_export.py  audit.py  dashboard.py  dora_tracker.py  logging.py  otel.py  prometheus_metrics.py
runtime/orchestrator/: INDEX.md  __init__.py  context.py  direct.py  flows.py  hooks.py  release_readiness.py  tasks.py  user_hooks.py
runtime/plugins/: __init__.py
runtime/registry/: INDEX.md  __init__.py  registry.py
runtime/router/: INDEX.md  __init__.py  expert_loader.py  intent.py  llm_cache.py  llm_client.py  model_router.py  prompt.py  retrieval.py  router.py  schema.py  skill_loader.py  v2_prompt.py  v2_router.py
runtime/scheduler/: INDEX.md  __init__.py  carbon_scheduler.py  injection_scan.py  jobs.py  nl_cron.py  scheduler.py
runtime/sdk/: __init__.py  discovery.py  install.py  marketplace.py  package.py  publish.py  scaffold.py  test_runner.py  validate.py
runtime/security/: __init__.py  supply_chain.py
runtime/self_healing/: __init__.py  locator_store.py  retry.py
runtime/storage/: INDEX.md  __init__.py  alembic.ini  db.py  models.py  objects.py  repo.py
runtime/subagent/: INDEX.md  __init__.py  aux_client.py  pool.py  spawn.py
runtime/testing/: __init__.py  cypress.py  e2e.py  integration.py  mobile.py  unit.py  visual.py
runtime/tests/: conftest.py  test_agent_runners.py  test_api_auth.py  test_basic_skills.py  test_build_artifact.py  test_catalog.py  test_cli_commands.py  test_cli_config.py  test_completer.py  test_conversation.py  test_cost_control.py  test_degradation.py  test_deprecation.py  test_di.py  test_enterprise.py  test_evidence.py  test_execution_context.py  test_flaky_intelligence.py  test_idempotency.py  test_impact_engine.py  test_impl_status_filter.py  test_infra_timeout.py  test_infra_trace.py  test_integration_cli.py  test_intent_detection.py  test_interactive_commands.py  test_kg_api.py  test_marketplace.py  test_marketplace_api.py  test_mcp_client.py  test_metrics_parser.py  test_migration_update_telemetry.py  test_model_router.py  test_multiline_input.py  test_offline.py  test_permissions.py  test_plugins.py  test_portability.py  test_prompt_guard.py  test_registry.py  (+28 more)
runtime/tutor/: INDEX.md  __init__.py  eval_replay.py  explainer.py  feedback.py  graph.py  i18n.py  integrity.py  theory_kb.py  verbosity.py
runtime/ui/: __init__.py
runtime/web/: INDEX.md  __init__.py  index.html  kg_api.py  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
(+898 files in other folders)
