[project]
name = "test-agent-runtime"
version = "1.0.0"
description = "Test-Agent runtime: AI router + Prefect orchestrator + FastAPI/CLI entry + flywheel storage"
requires-python = ">=3.10"
license = { text = "MIT" }
readme = "INDEX.md"

dependencies = [
    "mcp>=1.0.0",
    "litellm>=1.55.0",
    "prefect>=2.20.0",
    "factory-boy>=3.3.0",
    "faker>=30.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "typer>=0.16.0,<0.26.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.2.0",
    "pgvector>=0.3.0",
    "minio>=7.2.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "loguru>=0.7.2",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
    "pyyaml>=6.0.1",
    "openpyxl>=3.1.0",
    "pypdf>=6.0.0",
    "python-docx>=1.1.0",
    "rich>=13.9.0",
    "prompt-toolkit>=3.0",
    "defusedxml>=0.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[project.scripts]
tagent = "runtime.cli.main:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".."]
include = ["runtime*", "utils*"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov-branch"
# CI overrides addopts to add: --cov=runtime --cov=utils --cov-fail-under=30
log_cli = false
filterwarnings = [
    "ignore::DeprecationWarning:prefect.*",
    "ignore::DeprecationWarning:starlette.*",
    "ignore::pytest.PytestConfigWarning",
]
markers = [
    "flaky: flaky test (quarantine candidate)",
    "portability: portability / co-existence / replaceability test (ISO 25010)",
    "slow: slow test (>30s)",
    "smoke: fast smoke / sanity check",
]

[tool.pylint.main]
ignore = ["tests", ".venv", "__pycache__", "archive"]
load-plugins = []

[tool.pylint.messages_control]
max-line-length = 110
disable = ["C0114", "C0115", "C0116", "R0903", "R0801"]

[tool.radon]
cc_rank = "B"
