[package]
name = "tagent-pyo3"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]
name = "tagent_engine"

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
tagent-engine = { path = "../tagent-engine" }
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
serde_json = "1"
